--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.79.3"
+    "react-hook-form": "^7.53.0",
+    "sass": "^1.79.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
