--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "eslint-config-next": "^14.2.13",
+    "next-auth": "^5.0.0-beta.21",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "sass": "^1.79.3",
     "zod": "^3.23.8"
