--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "axios": "^1.7.7",
     "eslint-config-next": "^14.2.13",
-    "next-auth": "^5.0.0-beta.21",
+    "jwt-decode": "^4.0.0",
     "next": "^14.2.3",
+    "next-auth": "^5.0.0-beta.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
