--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^5.0.0-beta.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.9",
     "react-hook-form": "^7.53.0",
     "sass": "^1.79.3",
     "zod": "^3.23.8"
